--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/imagens/banner-motor1.jpg" class="d-block w-100" alt="...">
+                <img src="assets/imagens/banner1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/imagens/carros.jpg" class="d-block w-100" alt="...">
+                <img src="assets/imagens/banner2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="assets/imagens/mechanic.jpg" class="d-block w-100" alt="...">
@@ -75,6 +75,10 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+            <div class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center border-top">
+              <h1 class="text-warning">Revizzi Auto Center</h1>
+              <p class="text-warning">O Respeito que seu carro merece.</p>
+            </div>
         </div>
       </section>
       <section>
