criação da pagina sobre e serviços

--- a/sobre.html
+++ b/sobre.html
@@ -43,10 +43,84 @@
     </nav>
     </header>
     <main>
+      <br><br><br>
+      <section>
+          <!-- Seção sobre nós -->
+          <div class="col-10 m-auto">
+              <h2 class="text-center">SOBRE NÓS</h2>
+              <p class="col-7 m-auto text-center">
+                  Bem-vindo ao Revizzi Auto Center, o seu destino confiável para serviços automotivos de alta qualidade. Fundada com a missão de proporcionar a cada cliente uma experiência excepcional, combinamos habilidade técnica, dedicação e respeito para oferecer os melhores serviços para o seu veículo.
 
-    </main>
-    <footer>
+                  Nossa equipe de profissionais altamente qualificados está comprometida em garantir que seu carro receba a atenção e os cuidados necessários. Desde reparos mecânicos até serviços de manutenção preventiva, estamos aqui para atender a todas as suas necessidades automotivas.
 
-    </footer>
+                  No Revizzi Auto Center, valorizamos a transparência e a honestidade. Nosso objetivo é construir relacionamentos duradouros com nossos clientes, baseados na confiança mútua. Entendemos a importância do seu veículo em sua vida cotidiana e nos esforçamos para mantê-lo funcionando de forma eficiente e segura.
+
+                  Explore nosso site para descobrir mais sobre os serviços que oferecemos e entre em contato conosco para agendar uma consulta. Estamos ansiosos para atendê-lo e superar suas expectativas em cada visita.
+
+                  Obrigado por escolher o Revizzi Auto Center - O Respeito que seu carro merece.
+              </p>
+          </div>
+      </section>
+  </main>
+  <footer class="bg-dark text-white pt-5 pb-4">
+    <div class="container text-center text-md-left">
+      <div class="row text-center text-md-left">
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h4 class="text-uppercase mb-4 font-weight-bold text-warning">Revizzi Auto Center</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut esse facere tempora repudiandae placeat cum nemo !</p>
+        </div>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h4 class="text-uppercase mb-4 font-weight-bold text-warning">Serviços</h4>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h4 class="text-uppercase mb-4 font-weight-bold text-warning">blog</h4>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+          <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+        </div>
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h4 class="text-start text-uppercase mb-4 font-weight-bold text-warning">Contato</h4>
+          <p class="text-start"><i class="bi bi-house mr-3"></i> João Pessoa, PB</p>
+          <p class="text-start"><i class="bi bi-envelope mr-3"></i> revizziautocenter@hotmail.com</p>
+          <p class="text-start"><i class="bi bi-phone mr-3"></i> (83) 99999-9999</p>
+          <p class="text-start"><i class="bi bi-printer mr-3"></i> +1 (999) 999-0009</p>
+        </div>
+      </div>
+      <hr class="mb-3">
+      <div class="row align-itens-center">
+        <div class="col-md-7 col-lg-8">
+          <p>Copyright 2023 All rights reserved by:<a href="#" style="text-decoration: none;">
+            <strong class="text-warning">Pablo Silva</strong>
+          </a></p>
+        </div>
+        <div class="col-md-5 col-lg-4">
+          <div class="text-center text-md-right">
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item">
+                <a href="#" class="btn-floating btn-sm text-white" style="font-size: 23px;"><i class="bi bi-whatsapp"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="btn-floating btn-sm text-white" style="font-size: 23px;"><i class="bi bi-twitter"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="btn-floating btn-sm text-white" style="font-size: 23px;"><i class="bi bi-instagram"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="btn-floating btn-sm text-white" style="font-size: 23px;"><i class="bi bi-facebook"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
