--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Revizzi Auto Center</title>
 </head>
 
 <body>
