--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,11 @@
     <title>Revizzi - Sobre nós</title>
 </head>
 <body>
-    <header>
-      <nav class="navbar col-12 position-fixed navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" style="z-index: 999;">
+  <header>
+    <!--    navbar   -->
+    <nav class="navbar col-12 position-fixed navbar-expand-lg bg-body-tertiary bg-gradient" data-bs-theme="dark" style="z-index: 999;">
         <div class="container-fluid col-10 m-auto">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand text-warning" href="index.html">
             <i class="bi bi-wrench-adjustable-circle-fill"></i>
             Revizzi
           </a>
@@ -23,7 +24,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                <a class="nav-link " aria-current="page" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="sobre.html">SOBRE</a>
@@ -32,7 +33,7 @@
                 <a class="nav-link" href="servicos.html">SERVIÇOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blog.html">BLOG</a>
+                <a class="nav-link active text-warning" href="blog.html">BLOG</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contato.html">CONTATO</a>
@@ -41,7 +42,9 @@
           </div>
         </div>
     </nav>
-    </header>
+      
+      
+</header>
     <main>
       <section>
           <!-- Seção de posts do blog -->
@@ -71,7 +74,7 @@
           </div>
       </section>
   </main>
-  <footer class="bg-dark text-white pt-5 pb-4">
+  <footer class="bg-gradient bg-dark text-white pt-5 pb-4">
     <div class="container text-center text-md-left">
       <div class="row text-center text-md-left">
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
