--- a/index.html
+++ b/index.html
@@ -387,7 +387,8 @@
           </div>
         </div>
       </section>
-          <hr>
+      <br>
+      <!-- Sobre a empresa -->
       <section>
         <div class="col-10 m-auto">
           <h2 class="text-center">SOBRE NÓS</h2>
