--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!--    carrousel    -->
       <section>
         
-        <div id="carouselExampleIndicators" class="carousel slide">
+        <div data-interval="100" id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -272,11 +272,11 @@
           </div>
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h4 class="text-uppercase mb-4 font-weight-bold text-warning">Serviços</h4>
+            <a href="#" class="text-white" style="text-decoration: none;">Injeção Eletrônica</a>
+            <a href="#" class="text-white" style="text-decoration: none;">Manutenção Preventiva</a>
+            <a href="#" class="text-white" style="text-decoration: none;">Suspensão</a>
             <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
-            <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
-            <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
-            <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
-            <a href="#" class="text-white" style="text-decoration: none;">Escapamento</a>
+            <a href="#" class="text-white" style="text-decoration: none;">Troca de Oléo</a>
           </div>
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
             <h4 class="text-uppercase mb-4 font-weight-bold text-warning">blog</h4>
@@ -297,7 +297,7 @@
         <hr class="mb-3">
         <div class="row align-itens-center">
           <div class="col-md-7 col-lg-8">
-            <p>Copyright 2023 All rights reserved by:<a href="#" style="text-decoration: none;">
+            <p>Copyright 2023 All rights reserved by:<a href="https://github.com/Pablosillva" style="text-decoration: none;">
               <strong class="text-warning">Pablo Silva</strong>
             </a></p>
           </div>
