--- a/blog.html
+++ b/blog.html
@@ -59,22 +59,22 @@
               <!-- Post 1 -->
               <article class="mb-4">
                   <h3>Título do Post 1</h3>
-                  <p class="text-muted">Publicado em 20 de Novembro de 2023</p>
+                  <p class="text-muted">Publicado em 10 de Dezembro de 2023</p>
                   <img src="assets/imagens/blog-revisao-330x180.jpg" alt="Imagem do Post 1" class="img-fluid">
                   <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos.
+                    Com as férias se aproximando, muitos de nós já estão ansiosos para pegar a estrada e explorar novos destinos. Mas antes de se aventurar nas rodovias, é crucial garantir que o seu veículo esteja pronto para enfrentar a jornada sem nenhum contratempo. Como a equipe de especialistas da [Nome da Oficina Mecânica], estamos aqui para destacar a importância das revisões antes de sair para as férias.
                   </p>
-                  <a href="post1.html" class="btn btn-primary">Leia mais</a>
+                  <a href="post1.html" class="btn btn-warning">Leia mais</a>
               </article>
               <!-- Post 2 -->
               <article class="mb-4">
                   <h3>Título do Post 2</h3>
-                  <p class="text-muted">Publicado em 18 de Novembro de 2023</p>
+                  <p class="text-muted">Publicado em 10 de Dezembro de 2023</p>
                   <img src="caminho/para/imagem2.jpg" alt="Imagem do Post 2" class="img-fluid">
                   <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos.
                   </p>
-                  <a href="post2.html" class="btn btn-primary">Leia mais</a>
+                  <a href="post2.html" class="btn btn-warning">Leia mais</a>
               </article>
               <!-- Adicione mais posts conforme necessário -->
           </div>
