--- a/post1.html
+++ b/post1.html
@@ -86,7 +86,7 @@
             
             Verificar se o macaco, chave de roda e estepe estão em boas condições. <br>
             Certificar-se de que o kit de primeiros socorros e os triângulos de sinalização estejam no veículo. <br><br>
-            Esses são apenas alguns dos itens essenciais a serem revisados. Lembre-se de que uma revisão detalhada deve abranger todos os sistemas críticos do veículo para garantir uma viagem segura e sem problemas. Agende sua revisão na [Nome da Oficina Mecânica] e viaje com tranquilidade!</P>
+            Esses são apenas alguns dos itens essenciais a serem revisados. Lembre-se de que uma revisão detalhada deve abranger todos os sistemas críticos do veículo para garantir uma viagem segura e sem problemas. Agende sua revisão na Revizzi Auto Center e viaje com tranquilidade!</P>
         </div>
     </main>
     
