--- a/index.html
+++ b/index.html
@@ -189,6 +189,28 @@
         </div>
       </section>
       <br>
+      <!-- Melhores do ano -->
+      <section>
+        <div class="container row">
+          <div class="col-3 container">
+            <p>
+              É com imensa alegria que compartilhamos a notícia de que nossa oficina foi eleita a "Melhor do Ano"! Este reconhecimento é fruto do comprometimento de nossa equipe e do entusiasmo dos participantes.
+  
+              Nossa oficina é mais do que um espaço de aprendizado; é um ambiente de inspiração, inovação e colaboração. Agradecemos a todos que fizeram parte dessa jornada, desde os facilitadores dedicados até os participantes engajados.
+  
+              Receber esse prêmio é um estímulo para continuarmos oferecendo experiências excepcionais e promovendo o crescimento de nossa comunidade. Estamos empolgados com o que o futuro reserva e agradecemos a confiança depositada em nós.
+  
+              Juntos, vamos continuar construindo momentos incríveis!
+  
+              Gratos,
+            </p>
+          </div>
+          <div class="col-3 container d-flex justify-content-center align-items-center">
+            <img class="img-fluid" src="assets/imagens/melhores-do-ano-2022.jpg" alt="">
+          </div>
+        </div>
+      </section>
+      <br>
       <!-- Sobre a empresa -->
       <section class="sobre">
         <div class="col-10 m-auto">
