--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <div class="row align-itens-center">
           <div class="col-md-7 col-lg-8">
             <p>Copyright 2023 All rights reserved by:<a href="https://github.com/Pablosillva" style="text-decoration: none;">
-              <strong class="text-warning">Pablo Silva</strong>
+              <strong class="text-warning"><a href="https://pablosillva.github.io/portfolio/">Pablo Silva</a></strong>
             </a></p>
           </div>
           <div class="col-md-5 col-lg-4">
